fix some deprecation warnings in Java 9+